--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-	<h1> Understanding Your Electricity Bill</h1>
+	<h1> Understanding <br/> Your Electricity Bill</h1>
 	<!-- STEP ONE -- LIGHTBULB ICON CREATION 
 
 	Using a Vector Graphics Drawing program such as Illustrator, create the lighbulb icon as a vector graphic for your website. When saving your image, choose the SVG format. 
@@ -22,33 +22,34 @@
 	https://www.adobe.com/products/illustrator.html
 
 	-->
-	<div></div>
+	<div style="width: 100px; height: 100px;"></div>
 </header>
 <section>
 	<!--- STEP TWO - adding missing icon here - you can either generate it using Illustrator or programmatically -- your choice!-->
-	<h1> Be an Informed Energy Consumer.</h1>
-	<h2> We Can Help</h2>
+	<div>
+		<h1> Be an Informed Energy Consumer.</h1>
+		<h2> We Can Help</h2>
 
-	<p> For information on a range of topics visit: </p> 
-	<ul>
-		<li>
-			<a href="OntarioEnergyBoard.ca/Consumers">OntarioEnergyBoard.ca/Consumers</a>
-		</li>
-		<li>
-			Contact Consumer Relations (open Monday to Friday, 8:30 a.m. to 5 p.m.)
-			<a href="tel:18776322727">1-877-632-2727</a>
-		</li>
-		<li>
-			<a href="mailto:ConsumerRelations@OntarioEnergyBoard.ca">ConsumerRelations@OntarioEnergyBoard.ca</a>
-		</li>
-		<li>@OntEnergyBoard</li>
-	</ul>
+		<p> For information on a range of topics visit: </p> 
+		<ul>
+			<li>
+				<a href="OntarioEnergyBoard.ca/Consumers">OntarioEnergyBoard.ca/Consumers</a>
+			</li>
+			<li>
+				Contact Consumer Relations (open Monday to Friday, 8:30 a.m. to 5 p.m.)
+				<a href="tel:18776322727">1-877-632-2727</a>
+			</li>
+			<li>
+				<a href="mailto:ConsumerRelations@OntarioEnergyBoard.ca">ConsumerRelations@OntarioEnergyBoard.ca</a>
+			</li>
+			<li>@OntEnergyBoard</li>
+		</ul>
+	</div>
 	<p>
 	The Ontario Energy Board is an independent and impartial public regulatory agency. We make decisions that serve the public interest. Our goal is to promote a viable, sustainable
 	and efficient energy sector that provides you with reliable energy services that are cost effective.
 	Ce document est aussi disponible en français. Visit our website or contact Consumer Relations.
-	</p> 
-	
+	</p>
 </section>
 
 <main>
