--- a/index.html
+++ b/index.html
@@ -11,49 +11,85 @@
 
 <header>
 	<h1> Understanding <br/> Your Electricity Bill</h1>
-	<!-- STEP ONE -- LIGHTBULB ICON CREATION 
-
-	Using a Vector Graphics Drawing program such as Illustrator, create the lighbulb icon as a vector graphic for your website. When saving your image, choose the SVG format. 
-
-	If you don't have access to Illustrator : 
-
-	https://www.techradar.com/news/the-best-free-adobe-illustrator-alternatives
-
-	https://www.adobe.com/products/illustrator.html
-
-	-->
-	<div style="width: 100px; height: 100px;"></div>
+	<!-- STEP ONE -- LIGHTBULB ICON CREATION -->
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="256px" height="256px" viewBox="0 0 256 256" enable-background="new 0 0 256 256" xml:space="preserve">
+		<g>
+			<g>
+				<path fill="#FFFFFF" d="M86.372,206.097c0.431,2.789,1.052,6.464,1.897,10.588h81.032c0.845-4.124,1.467-7.799,1.897-10.588
+					H86.372z"/>
+				<polygon fill="#FFFFFF" points="128.785,189.88 79.468,189.88 79.468,200.87 85.634,200.87 171.937,200.87 178.102,200.87 
+					178.102,189.88 		"/>
+				<path fill="#FFFFFF" d="M92.698,233.706h72.174c1.193-3.587,2.215-7.344,3.088-10.987H89.61
+					C90.483,226.362,91.504,230.119,92.698,233.706z"/>
+				<path fill="#FFFFFF" d="M94.56,238.801c3.349,8.267,7.733,14.605,13.318,14.605c16.082,0,20.907,0,20.907,0s4.825,0,20.907,0
+					c5.585,0,9.97-6.339,13.318-14.605H94.56z"/>
+			</g>
+			<path fill="#FFFFFF" d="M74.778,141.568c0,0,18.896,5.829,17.288,36.787c0,0,2.814,4.222,7.639,4.222
+				c4.825,0,6.333-2.513,6.533-6.734c0.201-4.222,0.572-26.435-14.037-40.371l97.362-27.475c0,0,8.239-1.742,5.293-10.051
+				s-12.737-3.352-16.755-2.279C174.085,96.74,64.055,126.76,64.055,126.76s-4.755,3.048-3.248,9.481
+				C62.315,142.674,67.039,141.065,74.778,141.568z"/>
+			<path fill="#FFFFFF" d="M195.494,133.059c0,0,1.372-7.236-10.287-6.03s-26.799,8.71-30.688,20.64
+				c-3.889,11.926-6.967,20.771-5.629,27.606c1.338,6.834,12.728,9.111,15.008,0.669c0,0,1.209-20.907,6.301-26.938
+				s16.349-8.041,20.369-8.443C194.589,140.161,195.494,133.059,195.494,133.059z"/>
+			<path fill="#FFFFFF" d="M63.653,94.596l120.216-33.101c0,0,7.236-1.071,9.247,1.206c2.01,2.277,6.03,10.318-4.825,13.132
+				c-10.854,2.814-118.337,32.299-118.337,32.299s-7.036,2.076-8.945-3.251S61.175,96.271,63.653,94.596z"/>
+			<path fill="#FFFFFF" d="M61.812,71.209c0,0,1.91,5.629,6.936,4.825s120.615-32.566,120.615-32.566s7.84-1.407,6.132-8.644
+				c-1.709-7.237-6.333-7.438-14.173-5.227c-7.84,2.211-112.574,30.756-112.574,30.756S58.797,61.243,61.812,71.209z"/>
+			<path fill="#FFFFFF" d="M93.436,36.605l75.221-21.28c0,0,5.025-2.312,2.814-8.242c-2.212-5.93-9.851-4.724-15.278-3.417
+				S89.855,22.26,88.046,22.763s-5.93,4.523-3.016,9.448C87.945,37.136,93.436,36.605,93.436,36.605z"/>
+		</g>
+	</svg>
 </header>
-<section>
+<section class="card">
+	<div class="content">
 	<!--- STEP TWO - adding missing icon here - you can either generate it using Illustrator or programmatically -- your choice!-->
-	<div>
-		<h1> Be an Informed Energy Consumer.</h1>
-		<h2> We Can Help</h2>
-
-		<p> For information on a range of topics visit: </p> 
-		<ul>
-			<li>
-				<a href="OntarioEnergyBoard.ca/Consumers">OntarioEnergyBoard.ca/Consumers</a>
-			</li>
-			<li>
-				Contact Consumer Relations (open Monday to Friday, 8:30 a.m. to 5 p.m.)
-				<a href="tel:18776322727">1-877-632-2727</a>
-			</li>
-			<li>
-				<a href="mailto:ConsumerRelations@OntarioEnergyBoard.ca">ConsumerRelations@OntarioEnergyBoard.ca</a>
-			</li>
-			<li>@OntEnergyBoard</li>
-		</ul>
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="135.582px" height="256px" viewBox="0 0 135.582 256" enable-background="new 0 0 135.582 256" xml:space="preserve">
+		<g>
+			<path fill="#FFFFFF" d="M125.14,1.016c-9.574,0-10.437,10.437-10.437,10.437v48.427c0,0,1.831,10.116,10.437,10.116
+				c8.611,0,10.442-10.116,10.442-10.116V11.452C135.582,11.452,134.72,1.016,125.14,1.016z"/>
+			<path fill="#FFFFFF" d="M125.14,186.002c-9.574,0-10.437,10.441-10.437,10.441v48.427c0,0,1.831,10.114,10.437,10.114
+				c8.611,0,10.442-10.114,10.442-10.114v-48.427C135.582,196.443,134.72,186.002,125.14,186.002z"/>
+			<path fill="#FFFFFF" d="M61.454,17.165c-8.14,5.045-3.377,14.374-3.377,14.374l25.507,41.157c0,0,6.891,7.638,14.205,3.105
+				c7.314-4.54,3.546-14.102,3.546-14.102L75.826,20.535C75.826,20.535,69.594,12.123,61.454,17.165z"/>
+			<path fill="#FFFFFF" d="M14.96,62.593c-5.118,8.091,3.241,14.404,3.241,14.404l40.925,25.878c0,0,9.532,3.864,14.132-3.41
+				c4.596-7.281-2.971-14.235-2.971-14.235L29.356,59.344C29.356,59.344,20.077,54.499,14.96,62.593z"/>
+			<path fill="#FFFFFF" d="M0,127.666c0,9.576,10.438,10.439,10.438,10.439h48.426c0,0,10.117-1.832,10.117-10.439
+				c0-8.608-10.117-10.439-10.117-10.439H10.438C10.438,117.227,0,118.089,0,127.666z"/>
+			<path fill="#FFFFFF" d="M16.15,191.354c5.045,8.137,14.374,3.375,14.374,3.375l41.157-25.505c0,0,7.635-6.891,3.105-14.205
+				c-4.54-7.314-14.102-3.546-14.102-3.546l-41.166,25.51C19.52,176.982,11.108,183.218,16.15,191.354z"/>
+			<path fill="#FFFFFF" d="M61.578,237.849c8.091,5.115,14.404-3.238,14.404-3.238l25.878-40.931c0,0,3.863-9.529-3.41-14.13
+				c-7.279-4.596-14.235,2.972-14.235,2.972l-25.886,40.93C58.329,223.451,53.484,232.733,61.578,237.849z"/>
+		</g>
+	</svg>
+		<div>
+			<h1> Be an Informed Energy Consumer.</h1>
+			<h2> We Can Help</h2>
+			<p> For information on a range of topics visit: </p> 
+			
+			<ul>
+				<li>
+					<a href="OntarioEnergyBoard.ca/Consumers">OntarioEnergyBoard.ca/Consumers</a>
+				</li>
+				<li>
+					Contact Consumer Relations <br /> (open Monday to Friday, 8:30 a.m. to 5 p.m.)
+					<a href="tel:18776322727">1-877-632-2727</a>
+				</li>
+				<li>
+					<a href="mailto:ConsumerRelations@OntarioEnergyBoard.ca">ConsumerRelations@OntarioEnergyBoard.ca</a>
+				</li>
+				<li class="bolded"><img src="img/twitter-brands.svg" alt="Twitter Logo" width="30px" /> @OntEnergyBoard</li>
+			</ul>
+		</div>
 	</div>
 	<p>
-	The Ontario Energy Board is an independent and impartial public regulatory agency. We make decisions that serve the public interest. Our goal is to promote a viable, sustainable
-	and efficient energy sector that provides you with reliable energy services that are cost effective.
-	Ce document est aussi disponible en français. Visit our website or contact Consumer Relations.
+	The Ontario Energy Board is an independent and impartial public regulatory agency. We make decisions that serve the public interest. Our goal is to promote a viable, sustainable and efficient energy sector that provides you with reliable energy services that are cost effective. <br />Ce document est aussi disponible en français. Visit our website or contact Consumer Relations.
 	</p>
 </section>
 
 <main>
-	<section>
+	<section class="card invert">
 		<!-- STEP THREE -- we need that icon here too! -->
 		<h2> Time of Use Electricity Prices </h2>
 		<p>Households and small businesses in Ontario pay time-of-use prices for electricity that change according to the
